<resources>
    <string name="app_name" translatable="false">Remote Controller App</string>
    <string name="action_settings">Settings</string>
    <string name="id" translatable="false">ID</string>
    <string name="colon_id" translatable="false">ID:</string>
    <string name="colon_size">Size:</string>
    <string name="colon_color">Color:</string>
    <string name="language_header">Language</string>
    <string name="language_title">Select the language</string>
    <string name="english_entries">English</string>
    <string name="polish_entries">Polish</string>
    <string name="english_values" translatable="false">en</string>
    <string name="polish_values" translatable="false">pl</string>
    <string name="controller_edit">Edit Mode</string>
    <string name="enter_controller_name">Enter Controller Name</string>
    <string name="opening_addnew">Add new controller</string>
    <string name="action_bluetooth" translatable="false">Bluetooth</string>
    <string name="device_entries">Device language</string>
    <string name="device_values" translatable="false">device</string>
    <string name="action_usageMode">Usage</string>
    <string name="action_editMode">"Edit "</string>
    <string name="action_delete">Delete</string>
    <string name="action_favorite">Favorite device</string>
    <string name="action_sampleButton">Sample button</string>
    <string name="componentSelection">Component Selection</string>
    <string name="label_UsageMode">Usage Mode</string>
    <string name="label_Opening">Opening</string>
    <string name="label_EditMode">Edit Mode</string>
    <string name="label_ControllerMenu">Controller Menu</string>
    <string name="label_ComponentSelection">Component Selection</string>
    <string name="label_ComponentOptions">Component Options</string>
    <string name="label_availableDevices">Available devices</string>
    <string name="label_none">None</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_ok" translatable="false">Ok</string>
    <string name="component_Button">Button</string>
    <string name="component_TextArea">TextArea</string>
    <string name="colon_name">Name:</string>
    <string name="colon_x" translatable="false">X:</string>
    <string name="colon_y" translatable="false">Y:</string>
    <string name="colon_position">Position:</string>
    <string name="colon_message">Message:</string>
    <string name="label_deleted">Deleted</string>
    <string name="component_LED" translatable="false">LED</string>
    <string name="action_save">Save</string>
    <string name="component_Slider">Slider</string>
    <string name="component_TextField">TextField</string>
    <string name="label_BluetoothDeviceNotSelected">Bluetooth device is not selected</string>
    <string name="label_deleteController">Delete controller</string>
    <string name="label_deleteControllerSure">Are you sure you want to delete this controller?</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="label_selectComponent">Select a component</string>
    <string name="colon_range">Range:</string>
    <string name="colon_min" translatable="false">Min:</string>
    <string name="colon_max" translatable="false">Max:</string>
    <string name="label_deleteButton">Delete Button</string>
    <string name="label_deleteButtonSure">Are you sure you want to delete this button?</string>
    <string name="label_deleteLED">Delete Led</string>
    <string name="label_deleteLEDSure">Are you sure you want to delete this led?</string>
    <string name="label_deleteSlider">Delete Slider</string>
    <string name="label_deleteSliderSure">Are you sure you want to delete this slider?</string>
    <string name="label_deleteTextArea">Delete TextArea</string>
    <string name="label_deleteTextAreaSure">Are you sure you want to delete this text area?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="colon_layer">Layer</string>
    <string name="loggerMode">Logger mode</string>
    <string name="loggerActive">Logger is active</string>
    <string name="loggerInactive">Logger is inactive</string>
    <string name="prefix">Prefix</string>

</resources>